Upgrade to nopCommerce 4.20

--- a/Nop.Plugin.Admin.EnableAdminTheming.csproj
+++ b/Nop.Plugin.Admin.EnableAdminTheming.csproj
@@ -1,53 +1,30 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
- <PropertyGroup>
-
-    <TargetFramework>netcoreapp2.1</TargetFramework>
-
- </PropertyGroup>  
-
- <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-
-   <OutputPath>..\..\Presentation\Nop.Web\Plugins\Admin.EnableAdminTheming</OutputPath>
-
-   <OutDir>$(OutputPath)</OutDir>
-
- </PropertyGroup>
-
- <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-
-   <OutputPath>..\..\Presentation\Nop.Web\Plugins\Admin.EnableAdminTheming</OutputPath>
-
-   <OutDir>$(OutputPath)</OutDir>
-
- </PropertyGroup>
-
- <!-- This target execute after "Build" target -->
-
- <Target Name="NopTarget" AfterTargets="Build">
-
-   <!-- Delete unnecessary libraries from plugins path -->
-
-   <MSBuild Projects="$(MSBuildProjectDirectory)\..\..\Build\ClearPluginAssemblies.proj" Properties="PluginPath=$(MSBuildProjectDirectory)\$(OutDir)" Targets="NopClear" />
-
- </Target>
-
- <ItemGroup>
-   <None Remove="logo.jpg" />
-   <None Remove="plugin.json" />
- </ItemGroup>
-
- <ItemGroup>
-   <Content Include="logo.jpg">
-     <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-   </Content>
-   <Content Include="plugin.json">
-     <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-   </Content>
- </ItemGroup>
-
- <ItemGroup>
-   <ProjectReference Include="..\..\Presentation\Nop.Web.Framework\Nop.Web.Framework.csproj" />
- </ItemGroup>
-
+<PropertyGroup>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <Company>sotait.net</Company>
+    <Authors>Aram Aramyan</Authors>
+    <RepositoryUrl>https://github.com/SotaIT/EnableAdminTheming</RepositoryUrl>
+    <RepositoryType>Git</RepositoryType>
+    <OutputPath>..\..\Presentation\Nop.Web\Plugins\Admin.EnableAdminTheming</OutputPath>
+    <OutDir>$(OutputPath)</OutDir>
+    <!--Set this parameter to true to get the dlls copied from the NuGet cache to the output of your project. You need to set this parameter to true if your plugin has a nuget package to ensure that the dlls copied from the NuGet cache to the output of your project-->
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+    </PropertyGroup>
+<ItemGroup>
+  <None Remove="plugin.json" />
+</ItemGroup>
+<ItemGroup>
+  <Content Include="plugin.json">
+    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+  </Content>
+</ItemGroup>
+  
+    <ItemGroup>
+    <ProjectReference Include="..\..\Presentation\Nop.Web.Framework\Nop.Web.Framework.csproj" />
+    </ItemGroup>
+    <!-- This target execute after "Build" target -->
+    <Target Name="NopTarget" AfterTargets="Build">
+    <!-- Delete unnecessary libraries from plugins path -->
+    <MSBuild Projects="@(ClearPluginAssemblies)" Properties="PluginPath=$(MSBuildProjectDirectory)\$(OutDir)" Targets="NopClear" />
+    </Target>
 </Project>
