--- a/Nop.Plugin.Admin.EnableAdminTheming.csproj
+++ b/Nop.Plugin.Admin.EnableAdminTheming.csproj
@@ -8,10 +8,16 @@
     <OutputPath>..\..\Presentation\Nop.Web\Plugins\Admin.EnableAdminTheming</OutputPath>
     <OutDir>$(OutputPath)</OutDir>
     <!--Set this parameter to true to get the dlls copied from the NuGet cache to the output of your project. You need to set this parameter to true if your plugin has a nuget package to ensure that the dlls copied from the NuGet cache to the output of your project-->
-    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+    <CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
     </PropertyGroup>
 <ItemGroup>
+  <None Remove="logo.jpg" />
   <None Remove="plugin.json" />
+</ItemGroup>
+<ItemGroup>
+  <Content Include="logo.jpg">
+    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+  </Content>
 </ItemGroup>
 <ItemGroup>
   <Content Include="plugin.json">
